# GoogleTestExample

./: CMakeLists.txt  README.md  gtest_example.cpp
GoogleTestExample/: CMakeLists.txt
src/: example.cpp
test/: gtest_example.cpp
